Fix modal style squish

--- a/src/components/styles/ProductPage.css
+++ b/src/components/styles/ProductPage.css
@@ -90,10 +90,12 @@
 		flex-direction: column;
 		align-items: center;
 		width: 100%;
+		height: 100%;
 	}
 	.item-details-container {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		height: auto;
 	}
 }
